src/app/components/WeDealWith/WeDealWith.module.css
.container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  min-height: 720px;
  padding: 2rem;
  background: #0038ff;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.inverted {
  flex-direction: row-reverse;
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-top: 0rem;
  padding-bottom: 0rem;
  position: relative; /* Add position: relative */
  z-index: 2; /* Set z-index higher than BlueCircle */
}

.preTitle {
  font-size: 40px;
  font-style: normal;
  font-weight: 400;
  line-height: 68px; /* 170% */
  text-transform: lowercase;
  white-space: nowrap;
  padding-left: 1rem;
  padding-right: 1rem;
}

.title {
  align-self: flex-start;
  text-align: left;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 2rem;
  font-size: 64px;
  font-style: normal;
  font-weight: 400;
  line-height: 68px; /* 106.25% */
  letter-spacing: 2.56px;
  text-transform: uppercase;
  white-space: nowrap;
}

.longTitle {
  white-space: pre-line;
}

.rowWrapper {
  width: 100%;
}

.titleRow {
  display: flex !important;
  flex-direction: row;
  margin-left: 10%;
  margin-right: 10%;
  padding-bottom: 2rem;
  gap: 0.5rem;
}

.titleForMobile {
  flex: 2;
  padding-bottom: 0 !important;
}

.mobileCircular {
  flex: 1;
}

.text {
  align-self: flex-start;
  text-align: left;
  padding-left: 1rem;
  padding-right: 1rem;
  max-width: 80%;
}

.imagesWrapper {
  flex: 1;
}

.image1,
.image2 {
  width: 320px;
  object-fit: cover;
  position: relative; /* Add position: relative */
  z-index: 2; /* Set z-index higher than BlueCircle */
}

.image1 {
  z-index: 10;
  position: absolute;
  top: 42.5%;
  right: 19%;
}

.image2 {
  z-index: 5;
  position: absolute;
  top: 15%;
  right: 12%;
}

.images {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.circularButtonWrapper {
  padding-bottom: 0;
  padding-left: 1rem;
}

.invisibleImage {
  visibility: hidden;
  position: relative !important;
  padding: 2rem;
  width: 240px;
}

/* Media query for bigger layout */
@media (min-width: 1820px) {
  .image {
    height: 50rem;
    width: auto;
  }

  .longTitle {
    white-space: nowrap;
  }
}

/* Media query for smaller layout */
@media (max-width: 1460px) {
  .blueCircleContainer {
    left: 45%;
    top: -15%;
  }

  .blueCircleWrapper {
    height: 520px;
    width: 520px;
  }

  .content {
  }
}

/* Media query for mobile layout */
@media (max-width: 1240px) {
  .container {
    display: flex;
    flex-direction: column-reverse !important;
    justify-content: space-between;
    gap: 1rem;
    margin-top: 2rem;
    margin-bottom: 2rem;
    min-height: 680px;
    padding: 0;
    padding-top: 2rem;
    margin-bottom: 0;
    background: #0038ff;
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  .container,
  .text,
  .title {
    flex-direction: column; /* Switch to a vertical layout for smaller screens */
    align-items: flex-start; /* Align items to the top left in mobile layout */
  }

  .image {
    align-self: center;
  }

  .content {
    display: flex;
    flex-direction: column;
    place-items: center;
  }

  .title,
  .text {
    margin: 0;
    padding: 0;
  }

  .text {
    margin-left: 10%;
    margin-right: 10%;
  }

  .duration {
    font-size: 32px;
    font-style: normal;
    font-weight: 400;
    line-height: 34px; /* 106.25% */
    text-transform: uppercase;
    margin-left: 2rem;
    margin-right: 2rem;
    padding: 0;
  }

  .image {
    max-width: 100%; /* Allow the image to take the full width in mobile layout */
    margin-right: 0; /* Remove margin for mobile layout */
    padding: 2rem;
  }

  .blueCircleWrapper {
    top: 0px;
    height: 0px;
    width: 0px;
  }

  .imagesWrapper {
    flex: 1;
  }

  .image1,
  .image2 {
    width: 60%;
    max-width: auto;
    object-fit: cover;
  }

  .image1 {
    z-index: 0;
    position: relative;
    top: auto;
  }

  .image2 {
    z-index: 5;
    position: absolute;
  }

  .circularButtonWrapper {
    place-self: center;
    padding-left: 0;
    aspect-ratio: 1 / 1;
    max-height: 140px;
    max-width: 140px;
  }

  .preTitle {
    font-size: 16px;
    line-height: 22px;
    padding: 0;
    padding-bottom: 1rem;
  }

  .title {
    font-size: 26px;
    line-height: 28px;
    letter-spacing: 0px;
    white-space: normal;
    padding-bottom: 2rem;
    text-align: left;
    align-self: center;
  }

  .longTitle {
  }

  .text {
    padding-bottom: 2rem;
    text-align: justify;
    align-self: center;
  }

  .imagesWrapper {
    position: relative;
    padding-bottom: 2rem;
    display: flex;
    flex-direction: row;
    position-items: center;
    width: 100%;
  }

  .images {
    align-items: center;
    width: 100%;
    padding-top: 1rem;
    position: relative;
    display: flex;
    flex-direction: column;
  }

  .image1 {
    right: auto;
    margin-right: 0;
  }

  .image2 {
    top: auto;
    right: auto;
    transform: translateY(-2rem) translateX(2rem);
  }

  .invisibleImage {
    max-width: 33vw;
  }

  .invisibleImage {
    padding-bottom: 10rem;
  }
}

@media ((min-width: 1240px) and (max-width: 1260px)) {
  .preTitle {
    padding-right: 0px;
  }
}

@media ((min-width: 1000px) and (max-width: 1240px)) {

  .title {
    font-size: 38px;
    line-height: 42px;
  }
}

@media (max-width: 700px) {
  .invisibleImage {
    padding-bottom: 6rem;
  }
}

.invisibleInMobile {
}

.visibleInMobile {
  height: 0px;
  width: 0px;
  visibility: hidden;
}

@media (max-width: 1240px) {
  .invisibleInMobile {
    height: 0px;
    width: 0px;
    visibility: hidden;
  }

  .visibleInMobile {
    display: block !important;
    visibility: visible !important;
    height: auto;
    width: auto;
  }
}

